src/objects/integrator_da__Related_SObject_Sync__c.object
<CustomObject>
    <fields>
        <fullName>integrator_da__Filter__c</fullName>
        <label>Filter</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>integrator_da__Real_Time_Sync__c</fullName>
        <label>Real Time Sync</label>
        <referenceTo>integrator_da__Real_Time_Sync__c</referenceTo>
        <relationshipLabel>Related SObject Syncs</relationshipLabel>
        <relationshipName>Related_SObject_Syncs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>integrator_da__Referenced_Fields__c</fullName>
        <label>Referenced Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>integrator_da__Related_Parent_Field__c</fullName>
        <inlineHelpText>If you would like to sync related list data please tell the sync which parent field (in the related list object) to use by entering that field&apos;s &apos;API Name&apos; here.  Example: OpportunityId to sync Opportunity and OpportunityLineItem at the same time.</inlineHelpText>
        <label>Related Parent Field</label>
        <length>128</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>integrator_da__Related_SObject_Type__c</fullName>
        <inlineHelpText>If you would like to sync related list data please tell the sync which related list to export by entering that related list&apos;s &apos;API Name&apos; here.  Example: OpportunityLineItem to sync Opportunity and OpportunityLineItem at the same time.</inlineHelpText>
        <label>Related SObject Type</label>
        <length>128</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>integrator_da__User_Defined__c</fullName>
        <defaultValue>false</defaultValue>
        <description>check the field to mark the related list user defined, the integrator.io will not remove this record when updating its parent record</description>
        <label>User Defined</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>integrator_da__order_by__c</fullName>
        <label>order by</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Related SObject Sync</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Related SObject Sync Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related SObject Syncs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>